<resources>
    <string name="app_name">My Application</string>
    <!--版权文本-->
    <string name="copyright">江西师范大学@林明皓</string>
    <!--登陆/注册-->
    <string name="login_or_register">登陆/注册</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">登 录</string>
    <string name="register">注 册</string>
    <string name="other_login">其他登录方式</string>
    <string name="enter_username">请输入手机号/邮箱</string>
    <string name="enter_password">请输入密码(6~15位)</string>
    <string name="forget_password">忘记密码?</string>
    <string name="login_success">登录成功</string>
    <string name="error_username_format">用户名格式不正确</string>
    <string name="error_password_format">密码格式不正确</string>
    <string name="error_network_unknown_host">找不到服务器，请稍后再试</string>
    <string name="error_network_connect">连接失败，请稍后再试过!</string>
    <string name="error_network_timeout">连接超时，请稍后再试</string>
    <string name="error_network_not_auth">登陆信息过期了，请重新登录！</string>
    <string name="error_network_not_permission">你没有权限访问</string>
    <string name="error_network_not_found">你访问的资源不存在</string>
    <string name="error_network_server">服务器错误，请稍后再试！</string>
    <string name="error_network_unknown">未知错误</string>
    <string name="loading">快点啊，等到花都谢了</string>
    <string name="enter_nickname">请输入用户名</string>
    <string name="enter_phone">请输入手机号</string>
    <string name="enter_email">请输入邮箱号</string>
    <string name="enter_confirm_password">重新输入一次密码</string>
    <string name="hint_agreement">江西师范大学@林明皓</string>
    <string name="error_nickname_format">昵称格式不正确</string>
    <string name="error_phone_format">手机号格式不正确</string>
    <string name="error_email_format">邮箱格式不正确</string>
    <string name="error_confirm_password_format">确认密码格式不正确</string>
    <string name="error_confirm_password">两次密码不一致</string>
</resources>