<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">
    <!--AppBarLayout主要用来实现标题折叠功能-->
        <include layout="@layout/tool_bar"></include>
        <!--layout_behavior:用来控制内容区域-->
        <LinearLayout
            app:layout_behavior="@string/appbar_scrolling_view_behavior"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_margin"
            android:orientation="vertical"
            >
            <!--这里不能使用maxLength限制最长字符数,因为我们这里用户名还有邮箱-->
            <EditText
                android:id="@+id/et_username"
                style="@style/EditText"
                android:inputType="textEmailAddress"
                android:hint="@string/enter_username"
                />
            <EditText
                android:id="@+id/et_password"
                style="@style/EditText"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                />
            <!--登陆按钮-->
            <Button
                android:id="@+id/bt_login"
                android:textColor="@drawable/selector_text_color_primary_reverse"
                android:background="@drawable/selector_color_primary"
                android:text="@string/login"
                android:layout_marginTop="@dimen/padding_large"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                />
            <!--去掉边框-->
            <Button
                android:id="@+id/bt_forget"
                android:background="@color/transparent"
                style="?attr/borderlessButtonStyle"
                android:textColor="@color/light_grey"
                android:text="@string/forget_password"
                android:layout_marginTop="@dimen/padding_large"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"/>
        </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>